ipcfun2.cc: adjust to compute with RDTSC only

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,7 @@
 add_executable("ipcfun" "ipcfun.cc")
 target_link_libraries(ipcfun ${papi_LDFLAGS} ${papi_LDFLAGS_OTHER})
 
+add_executable("ipcfun2" "ipcfun2.cc")
+target_link_libraries(ipcfun2)
+
 add_executable("tscdemo" "tscdemo.cc")
